src/app/globals.css
@import "tailwindcss";


:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --color-bg-default: #ffffff;
  --color-text-primary: #213547;
  --color-text-primary_80: rgba(33, 53, 71, 0.8);
  --color-text-primary_70: rgba(33, 53, 71, 0.7);
    --color-text-primary_60: rgba(33, 53, 71, 0.6);
  --color-text-primary_50: rgba(33, 53, 71, 0.5);
  --color-text-primary_20: rgba(33, 53, 71, 0.2);
  --color-gray-50: #fafafa;
  --color-gray-100: #f5f5f5;
  --color-gray-200: #eaeaea;
  --shadow-gray: rgba(200, 200, 200, 0.7);

  --color-slate-800: #2e2e2e;
  --color-slate-700: #3c3c3c;
  --color-slate-500: #595959;
  --color-slate-400: #6e6e6e;
  --color-slate-200: #ccd6f6;

  --color-white: #ffffff;
  --color-black: #1a1a1a;

  --color-green-500: #3cb371;
  --color-green-300: #81c784;
  --color-green-500_10: rgba(60, 179, 113, 0.1);
}

body {
  background-color: var(--color-bg-default);
  color: var(--color-text-primary);
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}

strong {
  color: var(--color-text-primary);
  font-weight: 600;
}

.swiper-button-prev::after,
.swiper-button-next::after {
  color: var(--color-text-primary_50); 
  width: 1.5rem; 
  height: 1.5rem; 
  --swiper-navigation-size: 1rem;
}

@theme {
    --animate-breathe: breathe 16s infinite ease-in-out;
    --animate-expand:  expand 16s infinite ease-in-out;
    --animate-words1:  words1 16s infinite;
    --animate-words2:  words2 16s infinite;
    --animate-words3:  words3 16s infinite;
    --animate-words4:  words4 16s infinite;
  
    @keyframes breathe {
      0%, 100% { transform: translate(0, 0) }
      25%      { transform: translate(200px, 0) }
      50%      { transform: translate(200px, 200px) }
      75%      { transform: translate(0, 200px) }
    }
  
    @keyframes expand {
      0%, 75%, 100% { width: 125px; height: 125px }
      25%, 50%      { width: 175px; height: 175px }
    }
  
    @keyframes words1 {
      0%,24%   { color: rgba(255,255,255,1) }
      26%,100% { color: rgba(255,255,255,0) }
    }
    @keyframes words2 {
      0%,24%   { color: rgba(255,255,255,0) }
      26%,49%  { color: rgba(255,255,255,1) }
      51%,100% { color: rgba(255,255,255,0) }
    }
    @keyframes words3 {
      0%,49%   { color: rgba(255,255,255,0) }
      51%,74%  { color: rgba(255,255,255,1) }
      76%,100% { color: rgba(255,255,255,0) }
    }
    @keyframes words4 {
      0%,74%   { color: rgba(255,255,255,0) }
      76%,99%  { color: rgba(255,255,255,1) }
      100%     { color: rgba(255,255,255,0) }
    }
  }

